--- a/src/main/resources/templates/email-forgot-password.html
+++ b/src/main/resources/templates/email-forgot-password.html
@@ -49,15 +49,16 @@
     <tr>
       <td width="10" valign="middle"><br></td>
       <td style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; max-width: 560px;">
-        <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0b0c0c;">Hi [[${name}]],</p>
-        <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0b0c0c;"> Forgot Password was requested for this account. If it wasn't you, please contact us as soon as possible! Please click on the link below to reset your password:</p>
+        <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0b0c0c;">Dear [[${firstName}]] [[${lastName}]],</p>
+        <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0b0c0c;">You recently requested to reset your password. To reset your password, please click on the following link:</p>
         <blockquote style="Margin: 0 0 20px 0; border-left: 10px solid #b1b4b6; padding: 15px 0 0.1px 15px; font-size: 19px; line-height: 25px;">
           <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0b0c0c;">
             <a th:href="${link}">Reset now</a>
           </p>
         </blockquote>
         Link will expire in 1 hour.
-        <p>See you soon</p>
+        <p>If you did not request to reset your password, please ignore this email.</p>
+        <p>Best regards, DocConnect</p>
       </td>
       <td width="10" valign="middle"><br></td>
     </tr>
