--- a/src/main/resources/templates/email-forgot-password.html
+++ b/src/main/resources/templates/email-forgot-password.html
@@ -17,7 +17,7 @@
                 <tr>
                   <td style="padding-left:10px"></td>
                   <td style="font-size: 28px; line-height: 1.315789474; Margin-top: 4px; padding-left: 10px;">
-                    <span style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; color: #f7cb3b; text-decoration: none; vertical-align: top; display: inline-block;">Reset your password.</span>
+                    <span style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; color: #f7cb3b; text-decoration: none; vertical-align: top; display: inline-block;">Reset your password</span>
                   </td>
                 </tr>
               </table>
@@ -58,7 +58,8 @@
         </blockquote>
         Link will expire in 1 hour.
         <p>If you did not request to reset your password, please ignore this email.</p>
-        <p>Best regards, DocConnect</p>
+        <br>Best regards,</br>
+        <span style="Margin: 5px 0 0 0">DocConnect</span>
       </td>
       <td width="10" valign="middle"><br></td>
     </tr>
